# FinalProjectCPP

./: .gitignore  CMakeLists.txt
model/: Commit.h  StandardCommit.cpp  StandardCommit.h  Validator.cpp  Validator.h
view/: ViewStart.txt
